force-app/main/default/objects/Outbound_Referral__c/Outbound_Referral__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Outbound Referral</label>
    <nameField>
        <displayFormat>OutboundReferral-{0000}</displayFormat>
        <label>Outbound Referral #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>