force-app/main/default/objects/Outbound_Referral__c/fields/Action_Steps__c.field-meta.xml
<CustomField>
    <fullName>Action_Steps__c</fullName>
    <label>Action Steps</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>