force-app/main/default/objects/Outbound_Referral__c/fields/Career_Advancement_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Career_Advancement_Referrals__c</fullName>
    <formula>if (ispickval(Referral_Type__c, &quot;Internal - Resume Support&quot;), &quot;Resume Support&quot;,

if (ispickval(Referral_Type__c, &quot;Internal - Personal Technical Support&quot;), &quot;Personal Technical Support&quot;,

if (ispickval(Referral_Category__c, &quot;Career Coach&quot;), &quot;Career Coaching&quot;,

if (ispickval(Referral_Category__c, &quot;Interview / Mock&quot;), &quot;Mock Interview&quot;,

if (ispickval(Referral_Type__c, &quot;Internal - Stability Screening&quot;), &quot;Stability Assessment&quot;,

NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Career Advancement Referrals</label>
    <type>Text</type>
</CustomField>