force-app/main/default/objects/Outbound_Referral__c/fields/Certification_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Certification_Achieved__c</fullName>
    <label>Certification Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Sit Down</fullName>
            </value>
            <value>
                <fullName>Stand Up</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>