force-app/main/default/objects/Outbound_Referral__c/fields/Day_2_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Training_Date__c</fullName>
    <label>Day 2 Training Date</label>
    <type>Date</type>
</CustomField>