force-app/main/default/objects/Outbound_Referral__c/fields/Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>Days_Pending__c</fullName>
    <formula>if ( not(isblank(Pending_End_Date__c)), Pending_End_Date__c - Pending_Start_Date__c,

if ( not(isblank(Pending_Start_Date__c)), today() - Pending_Start_Date__c,

0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>