force-app/main/default/objects/Outbound_Referral__c/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>FLOOR(Referral_Closed_Date__c - DATEVALUE(CreatedDate)) - Days_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>