force-app/main/default/objects/Outbound_Referral__c/fields/ECM_Sharing__c.field-meta.xml
<CustomField>
    <fullName>ECM_Sharing__c</fullName>
    <description>ECM v1 field set by workflow and used by criteria based sharing.</description>
    <label>ECM Sharing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>