force-app/main/default/objects/Outbound_Referral__c/fields/Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Date__c</fullName>
    <inlineHelpText>Updated automatically. Date when “Referral Status” is updated to &quot;Initiated Contact with Participant&quot;</inlineHelpText>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>