force-app/main/default/objects/Outbound_Referral__c/fields/of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Open__c</fullName>
    <formula>if ( not(isblank(Referral_Closed_Date__c)), NULL, 

if ( not(isblank(Pending_End_Date__c)), (Pending_Start_Date__c - Referral_Date__c) + (today() - Pending_End_Date__c),

if ( not(isblank(Pending_Start_Date__c)), Pending_Start_Date__c - Referral_Date__c,

today() - Referral_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>