force-app/main/default/objects/Outbound_Referral__c/fields/of_Days_to_Outcome_Obtained__c.field-meta.xml
<CustomField>
    <fullName>of_Days_to_Outcome_Obtained__c</fullName>
    <formula>IF (ISBLANK( Outcome_Obtained_Date__c), null,
IF(
Outcome_Obtained_Date__c &lt; Referral_Date__c,
0,
ABS(

CASE(MOD ( Referral_Date__c- DATE(1985,6,24),7),
0 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Outcome_Obtained_Date__c - Referral_Date__c
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((( Outcome_Obtained_Date__c ) - ( Referral_Date__c) )/7)*5)-1 +

( Outcome_Obtained_Date__c - Referral_Date__c) - ( Outcome_Obtained_Date__c -
Referral_Date__c))
)

)</formula>
    <label># of Days to Outcome Obtained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>