force-app/main/default/objects/Outbound_Referral__c/fields/of_Days_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>of_Days_to_Respond__c</fullName>
    <formula>IF (ISBLANK(Initial_Contact_Date__c), null,
IF(
Initial_Contact_Date__c &lt; Referral_Date__c,
0,
ABS(

CASE(MOD ( Referral_Date__c- DATE(1985,6,24),7),
0 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Initial_Contact_Date__c - Referral_Date__c
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((( Initial_Contact_Date__c ) - ( Referral_Date__c) )/7)*5)-1 +

( Initial_Contact_Date__c - Referral_Date__c) - (Initial_Contact_Date__c -
Referral_Date__c))
)

)</formula>
    <label># of Days to Respond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>