force-app/main/default/objects/Outbound_Referral__c/fields/Outcome_Not_Met_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Not_Met_Reason__c</fullName>
    <label>Reschedule/Outcome Not Met Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Participant_NCNS</fullName>
                <label>Participant NCNS</label>
            </value>
            <value>
                <fullName>Participant Schedule Change</fullName>
            </value>
            <value>
                <fullName>Unable to Coordinate</fullName>
            </value>
            <value>
                <fullName>Unresponsive to Outreach</fullName>
            </value>
            <value>
                <fullName>Volunteer Schedule Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>