force-app/main/default/objects/Outbound_Referral__c/fields/Outcome_Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Obtained_Date__c</fullName>
    <inlineHelpText>Automatically updated. Date when “Referral Status” is updated to &quot;Outcome Obtained&quot;</inlineHelpText>
    <label>Outcome Obtained Date</label>
    <type>Date</type>
</CustomField>