force-app/main/default/objects/Outbound_Referral__c/fields/Participant_Comments__c.field-meta.xml
<CustomField>
    <fullName>Participant_Comments__c</fullName>
    <label>Participant Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>