force-app/main/default/objects/Outbound_Referral__c/fields/Pending_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_End_Date__c</fullName>
    <label>Pending End Date</label>
    <type>Date</type>
</CustomField>