force-app/main/default/objects/Outbound_Referral__c/fields/Pending_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Start_Date__c</fullName>
    <label>Pending Start Date</label>
    <type>Date</type>
</CustomField>