force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Category__c.field-meta.xml
<CustomField>
    <fullName>Referral_Category__c</fullName>
    <label>Referral Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adelante - Excel &amp; Sheets</fullName>
            </value>
            <value>
                <fullName>Adelante - Intro to digital literacy</fullName>
            </value>
            <value>
                <fullName>Adelante - MS Office &amp; Google Suite</fullName>
            </value>
            <value>
                <fullName>Adelante - Other - please specify</fullName>
            </value>
            <value>
                <fullName>Adelante - PowerPoint &amp; Slides</fullName>
            </value>
            <value>
                <fullName>Adelante - Word &amp; Docs</fullName>
            </value>
            <value>
                <fullName>A Knock at Midnight</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>BeMore</fullName>
            </value>
            <value>
                <fullName>Bill Paying</fullName>
            </value>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Career Coach</fullName>
            </value>
            <value>
                <fullName>Career Development Costs</fullName>
            </value>
            <value>
                <fullName>Chicago Urban League</fullName>
            </value>
            <value>
                <fullName>Chicago Urban League - Google Certification</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Cleanslate Direct</fullName>
                <color>#33CC00</color>
                <label>Cleanslate Direct</label>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>ComEd &quot;CONSTRUCT&quot;</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Conflict Management</fullName>
            </value>
            <value>
                <fullName>Connects Direct</fullName>
                <color>#F3D904</color>
                <label>Connects Direct</label>
            </value>
            <value>
                <fullName>Credit Building</fullName>
            </value>
            <value>
                <fullName>Credit Repair</fullName>
                <label>Credit Repair (Debt)</label>
            </value>
            <value>
                <fullName>Daley College CNC</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Document Recovery</fullName>
            </value>
            <value>
                <fullName>Employment Benefits</fullName>
                <label>Employer-Based Benefits</label>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>