force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Closed_Date__c</fullName>
    <label>Referral Closed Date</label>
    <type>Date</type>
</CustomField>