force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reasons__c</fullName>
    <inlineHelpText>Based on Referral Category. Choose all that apply.</inlineHelpText>
    <label>Referral Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anger Management</fullName>
            </value>
            <value>
                <fullName>Background</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Child custody</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Family Support Services</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Glasses</fullName>
            </value>
            <value>
                <fullName>Health Care Services</fullName>
            </value>
            <value>
                <fullName>Healthcare waiver</fullName>
            </value>
            <value>
                <fullName>Medications</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Rental or Ownership</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Supportive Living, Affordable, Senior, Transitional</fullName>
            </value>
            <value>
                <fullName>Twin Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>