force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Reasons_Other__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reasons_Other__c</fullName>
    <label>Referral Reason(s) - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>