force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status__c</fullName>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Referral Sent</fullName>
            </value>
            <value>
                <fullName>Initiated Contact with Participant</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Participant Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending More Information</fullName>
            </value>
            <value>
                <fullName>Referral Closed - Waitlisted</fullName>
            </value>
            <value>
                <fullName>Referral Closed - Referred Externally</fullName>
            </value>
            <value>
                <fullName>Referral Closed - Outcome Obtained</fullName>
            </value>
            <value>
                <fullName>Referral Closed - Outcome Not Met</fullName>
            </value>
            <value>
                <fullName>Referral Closed - Imported</fullName>
            </value>
            <value>
                <fullName>Referral Closed - Met 1:1</fullName>
            </value>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Scheduled For Interview</fullName>
            </value>
            <value>
                <fullName>Completed Interview</fullName>
            </value>
            <value>
                <fullName>Attended Orientation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>