force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>External- CUL Digitial Literacy</fullName>
            </value>
            <value>
                <fullName>External- GED Training</fullName>
            </value>
            <value>
                <fullName>External- Non-Certification Training</fullName>
            </value>
            <value>
                <fullName>Internal - Adelante Digital Literacy</fullName>
            </value>
            <value>
                <fullName>Internal - Certification Trainings</fullName>
            </value>
            <value>
                <fullName>Internal - Engagement Digital Assistance Counseling</fullName>
            </value>
            <value>
                <fullName>Internal - Enterprise Recruitment</fullName>
            </value>
            <value>
                <fullName>Internal - Job Skills Assessment</fullName>
            </value>
            <value>
                <fullName>Internal - Mental Health Concern</fullName>
            </value>
            <value>
                <fullName>Internal - Portal</fullName>
            </value>
            <value>
                <fullName>Internal - Resume Support</fullName>
            </value>
            <value>
                <fullName>Internal - Stability Screening</fullName>
            </value>
            <value>
                <fullName>Internal - Supportive Services</fullName>
            </value>
            <value>
                <fullName>Internal - Transportation</fullName>
            </value>
            <value>
                <fullName>Internal - Volunteer Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>