force-app/main/default/objects/Outbound_Referral__c/fields/Referring_From_Program__c.field-meta.xml
<CustomField>
    <fullName>Referring_From_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring From Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Outbound Referrals (Referring From Program)</relationshipLabel>
    <relationshipName>Outbound_Referrals2</relationshipName>
    <type>Lookup</type>
</CustomField>