force-app/main/default/objects/Outbound_Referral__c/fields/Referring_from_Staff__c.field-meta.xml
<CustomField>
    <fullName>Referring_from_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring from Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outbound_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>