force-app/main/default/objects/Outbound_Referral__c/fields/Referring_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referring_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Not needed for Internal referrals. Optional for External referrals, if there is a specific Contact to whom the referral is being sent.</inlineHelpText>
    <label>Referring to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outbound Referrals (Referring to Contact)</relationshipLabel>
    <relationshipName>Outbound_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>