force-app/main/default/objects/Outbound_Referral__c/fields/Referring_to_Organization__c.field-meta.xml
<CustomField>
    <fullName>Referring_to_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Not needed for Internal referrals. Optional for External referrals, if there is a specific Organization to which the referral is being sent.</inlineHelpText>
    <label>Referring to Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Referral_Partner_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outbound Referrals</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>