force-app/main/default/objects/Outbound_Referral__c/fields/Referring_to_Program__c.field-meta.xml
<CustomField>
    <fullName>Referring_to_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring to Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Outbound Referrals</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>