force-app/main/default/objects/Outbound_Referral__c/fields/Referring_to_Staff__c.field-meta.xml
<CustomField>
    <fullName>Referring_to_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Outbound Referrals</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>