force-app/main/default/objects/Outbound_Referral__c/fields/Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Reschedule__c</fullName>
    <label>Reschedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>First Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>