force-app/main/default/objects/Outbound_Referral__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <formula>if (CreatedById = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>