force-app/main/default/objects/Outbound_Referral__c/fields/Scheduled_Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Appointment_Location__c</fullName>
    <label>Scheduled Appointment Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>