force-app/main/default/objects/Outbound_Referral__c/fields/Scheduling_Logistical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Logistical_Notes__c</fullName>
    <inlineHelpText>Use this space for notes on the best time to call the participant, appointment date(s), and other logistical details that are helpful to you or, in the case of an Internal referral, might be helpful to your colleague on the receiving end.</inlineHelpText>
    <label>Scheduling &amp; Logistical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>