force-app/main/default/objects/Outbound_Referral__c/fields/Sensitive_Info__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive Info</label>
    <type>Checkbox</type>
</CustomField>