force-app/main/default/objects/Outbound_Referral__c/fields/Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Outbound Referrals</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>