force-app/main/default/objects/Outbound_Referral__c/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <label>Training Completed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>