force-app/main/default/objects/Outbound_Referral__c/fields/Training_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_End_Date__c</fullName>
    <label>Training End Date</label>
    <type>Date</type>
</CustomField>