force-app/main/default/objects/Outbound_Referral__c/fields/Transportation_Scheduling_Details__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Scheduling_Details__c</fullName>
    <inlineHelpText>Include phone number, pick up address, drop off address, time of appointment.</inlineHelpText>
    <label>Transportation Scheduling Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>