force-app/main/default/objects/Outbound_Referral__c/validationRules/Progress_Note_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Note_is_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Referral_Type__c,&quot;Internal - Training Conversation&quot;)

&amp;&amp;

isblank(Progress_Note_from_Service_Entry__c)</errorConditionFormula>
    <errorMessage>Please enter a progress note with information for the trainers.</errorMessage>
</ValidationRule>